[package]
name = "roblox"
version = "0.1.0"
edition = "2021"
description = "A modern, asynchronous Rust wrapper for the Roblox web API — a port of ro.py"
license = "MIT"
repository = "https://github.com/andreasthuis/ro-rs"
keywords = ["roblox", "api", "async", "games"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
